<resources>
    <string name="app_name">Assignment4</string>
    <string name="name">Name</string>
    <string name="phone">Phone Number:</string>
    <string name="city">City</string>
    <string name="company_name">Company Name</string>
    <string name="process_status">Process Status</string>
    <string name="user_id">User ID</string>
    <string name="person_name">Person Name</string>
    <string name="username">Username</string>
    <string name="email">email</string>
    <string name="street_address">Street Address</string>
    <string name="suite">Suite</string>
    <string name="zipcode">Zipcode</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="website">Website</string>
    <string name="company_catch_phrase">Company Catch Phrase</string>
    <string name="bs">bs</string>
    <string name="awaited">AWAITED</string>
    <string name="completed">COMPLETED</string>
    <string name="denied">DENIED</string>
    <string name="go_back">Go Back</string>
    <string name="submit_changes">Submit Changes</string>
</resources>