<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:padding="16dp">

<TextView
    android:id="@+id/name"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/name"
    android:textColor="@color/black"/>

<TextView
    android:id="@+id/phoneNumber"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/phone"
    android:textColor="@color/black"/>

<TextView
    android:id="@+id/city"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/city"
    android:textColor="@color/black"/>

<TextView
    android:id="@+id/companyName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/company_name"
    android:textColor="@color/black"/>

<TextView
    android:id="@+id/processStatus"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/process_status"
    android:textColor="@color/black"/>



</LinearLayout>